use newer toList over Collectors.toList to help with clarity